--- a/ProxyHelper.Core/ProxyHelper.Core.csproj
+++ b/ProxyHelper.Core/ProxyHelper.Core.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8BD45110-0308-4B16-8B8D-EC9BC8A587A6}</ProjectGuid>
+    <ProjectGuid>{66F3FF45-3EA8-4EA2-9D77-AA42DE58C827}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ProxyHelper</RootNamespace>
-    <AssemblyName>ProxyHelper</AssemblyName>
+    <RootNamespace>ProxyHelper.Core</RootNamespace>
+    <AssemblyName>ProxyHelper.Core</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,7 +31,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -40,25 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Attributes.cs" />
     <Compile Include="Class1.cs" />
-    <Compile Include="Interfaces.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ProxyPropertyInfoHelper.cs" />
-    <Compile Include="ProxyType.cs" />
-    <Compile Include="ProxyTypeHelper.cs" />
-    <Compile Include="TypeStuff.cs" />
-    <Compile Include="ViewModelBase.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Core\Core.csproj">
-      <Project>{c919f964-acfd-4c8f-9742-cc74836d909c}</Project>
-      <Name>Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ProxyLinker\ProxyLinker.csproj">
-      <Project>{6a5f4a83-9f19-4072-bf88-d421806810ba}</Project>
-      <Name>ProxyLinker</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
