--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="EventToCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RelayCommand.cs" />
     <Compile Include="TemplateManager.cs" />
   </ItemGroup>
   <ItemGroup>
