--- a/ProxyLinker/ProxyLinker.csproj
+++ b/ProxyLinker/ProxyLinker.csproj
@@ -42,6 +42,12 @@
     <Compile Include="DefaultProxyLinker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj">
+      <Project>{c919f964-acfd-4c8f-9742-cc74836d909c}</Project>
+      <Name>Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
